Fixed bug #49627 (error_log to specified file does not log time according to date.timezone)